Added Booklist, Customerlist, Rentallist pages

--- a/BlazorLibrarianPage/Shared/NavMenu.razor
+++ b/BlazorLibrarianPage/Shared/NavMenu.razor
@@ -24,6 +24,21 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="booklist">
+                <span class="oi oi-book" aria-hidden="true"></span> Books
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="customerlist">
+                <span class="oi oi-person" aria-hidden="true"></span> Customers
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="rentallist">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Rentals
+            </NavLink>
+        </div>
     </nav>
 </div>
 
