Added: bookdetails page for librarian

--- a/BlazorCustomerPage/Pages/BookDetails.razor
+++ b/BlazorCustomerPage/Pages/BookDetails.razor
@@ -44,6 +44,8 @@ else
 
     public class BookList
     {
+        public int Id { get; set; }
+
         public string? Title { get; set; }
 
         public string? Author { get; set; }
