--- a/BlazorCustomerPage/Pages/Booklist.razor
+++ b/BlazorCustomerPage/Pages/Booklist.razor
@@ -32,7 +32,7 @@ else
                     <td>@book.Publisher</td>
                     <td>@book.InventoryNumber</td>
                     <td>@book.PublishYear</td>
-                    <td><a href="book/@book.Title" class="btn btn-primary">Details</a></td>
+                    <td><a href="book/@book.Id" class="btn btn-primary">Details</a></td>
                 </tr>
             }
         </tbody>
@@ -49,6 +49,8 @@ else
 
     public class BookList
     {
+        public int Id { get; set; }
+
         public string? Title { get; set; }
 
         public string? Author { get; set; }
