--- a/BlazorLibrarianPage/Pages/Rentallist.razor
+++ b/BlazorLibrarianPage/Pages/Rentallist.razor
@@ -56,6 +56,8 @@ else
 
     public class BookList
     {
+        public int Id { get; set; }
+
         public string? Title { get; set; }
 
         public string? Author { get; set; }
@@ -69,6 +71,8 @@ else
 
     public class CustomerList
     {
+        public int Id { get; set; }
+
         public string Name { get; set; }
 
         public string? Address { get; set; }
