--- a/BlazorCustomerPage/Pages/BookDetails.razor
+++ b/BlazorCustomerPage/Pages/BookDetails.razor
@@ -1,4 +1,4 @@
-﻿@page "/book/{title:str}"
+﻿@page "/book/{id:int}"
 @inject HttpClient Http
 
 <PageTitle>BookDetails</PageTitle>
@@ -9,19 +9,31 @@
 }
 else
 {
-    <table class="table table-hover table-border">
-        <thead>
-            <tr>
-                <th>Title</th>
-                <th>Author</th>
-                <th>Publisher</th>
-                <th>Inventory number</th>
-                <th>Year of publishing</th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var book in books)
-            {
+    BookList book = null;
+
+    foreach (var c in books)
+    {
+        if (c.Id == Id)
+        {
+            book = c;
+            break;
+        }
+    }
+
+    if (book is not null)
+    {
+        <h3>@book.Title's details</h3>
+        <table class="table table-hover table-border">
+            <thead>
+                <tr>
+                    <th>Title</th>
+                    <th>Author</th>
+                    <th>Publisher</th>
+                    <th>Inventory number</th>
+                    <th>Year of publishing</th>
+                </tr>
+            </thead>
+            <tbody>
                 <tr>
                     <td>@book.Title</td>
                     <td>@book.Author</td>
@@ -29,31 +41,39 @@ else
                     <td>@book.InventoryNumber</td>
                     <td>@book.PublishYear</td>
                 </tr>
+            </tbody>
+        </table>
+        <h3>Rental details</h3>
+        @foreach (var (rental, customer, book_) in rentals.Zip(customers, books))
+        {
+            @if (book.InventoryNumber == book_.InventoryNumber){
+                <table class="table table-hover table-border">
+                    <thead>
+                        <tr>
+                            <th>Title</th>
+                            <th>Available</th>
+                            <th>Rented by</th>
+                            <th>Returnal deadline</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>@book_.Title</td>
+                            @if (rental.RentalTime == null)
+                            {
+                                <td>Yes</td>
+                                <td>-</td>
+                            }
+                            else
+                            {
+                                <td>No</td>
+                                <td>@customer.Name</td>
+                            }
+                            <td>@rental.ReturnDeadline.ToShortDateString()</td>
+                        </tr>
+                    </tbody>
+                </table>
             }
-        </tbody>
-    </table>
-}
-
-@code {
-    private BookList[]? books;
-
-    protected override async Task OnInitializedAsync()
-    {
-        books = await Http.GetFromJsonAsync<BookList[]>("sample-data/book.json");
-    }
-
-    public class BookList
-    {
-        public int Id { get; set; }
-
-        public string? Title { get; set; }
-
-        public string? Author { get; set; }
-
-        public string? Publisher { get; set; }
-
-        public int InventoryNumber { get; set; }
-
-        public int PublishYear { get; set; }
+        }
     }
 }
