--- a/BlazorCustomerPage/Shared/NavMenu.razor
+++ b/BlazorCustomerPage/Shared/NavMenu.razor
@@ -29,6 +29,11 @@
                 <span class="oi oi-book" aria-hidden="true"></span> Books
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="filterbook">
+                <span class="oi oi-book" aria-hidden="true"></span> Filter Books
+            </NavLink>
+        </div>
     </nav>
 </div>
 
