--- a/BlazorLibrarianPage/Pages/Booklist.razor
+++ b/BlazorLibrarianPage/Pages/Booklist.razor
@@ -1,12 +1,14 @@
 ﻿@page "/booklist"
-@inject HttpClient Http
+@using BlazorFullStack.Contract
+@using BlazorLibrarianPage.Services
+@inject IBookService BookService
 
 <PageTitle>Booklist</PageTitle>
 
 <h1>List of Books</h1>
 
 
-@if (books == null)
+@if (Books == null)
 {
     <p><em>Loading...</em></p>
 }
@@ -24,7 +26,7 @@ else
             </tr>
         </thead>
         <tbody>
-            @foreach (var book in books)
+            @foreach (var book in Books)
             {
                 <tr>
                     <td>@book.Title</td>
@@ -40,25 +42,10 @@ else
 }
 
 @code {
-    private BookList[]? books;
+    private IEnumerable<Book>? Books { get; set; }
 
     protected override async Task OnInitializedAsync()
     {
-        books = await Http.GetFromJsonAsync<BookList[]>("sample-data/book.json");
-    }
-
-    public class BookList
-    {
-        public int Id { get; set; }
-
-        public string? Title { get; set; }
-
-        public string? Author { get; set; }
-
-        public string? Publisher { get; set; }
-
-        public int InventoryNumber { get; set; }
-
-        public int PublishYear { get; set; }
+        Books = await BookService.GetAllBooksAsync();
     }
 }
