--- a/BlazorLibrarianPage/Pages/Customerlist.razor
+++ b/BlazorLibrarianPage/Pages/Customerlist.razor
@@ -1,12 +1,14 @@
 ﻿@page "/customerlist"
-@inject HttpClient Http
+@using BlazorFullStack.Contract
+@using BlazorLibrarianPage.Services
+@inject ICustomerService CustomerService
 
 <PageTitle>CustomerList</PageTitle>
 
 <h1>List of Customers</h1>
 
 
-@if (customers == null)
+@if (Customers == null)
 {
     <p><em>Loading...</em></p>
 }
@@ -23,7 +25,7 @@ else
             </tr>
         </thead>
         <tbody>
-            @foreach (var customer in customers)
+            @foreach (var customer in Customers)
             {
                 <tr>
                     <td>@customer.Name</td>
@@ -39,23 +41,10 @@ else
 }
 
 @code {
-    public CustomerList[]? customers;
+    private IEnumerable<Member> Customers;
 
     protected override async Task OnInitializedAsync()
     {
-        customers = await Http.GetFromJsonAsync<CustomerList[]>("sample-data/customer.json");
-    }
-
-    public class CustomerList
-    {
-        public int Id { get; set; }
-
-        public string Name { get; set; }
-
-        public string? Address { get; set; }
-
-        public string? ReadingNumber { get; set; }
-
-        public DateTime DateOfBirth { get; set; }
+        Customers = await CustomerService.GetAllMembersAsync();
     }
 }
