Added InventoryNumber to rental addition

--- a/BlazorLibrarianPage/Pages/BookDetails.razor
+++ b/BlazorLibrarianPage/Pages/BookDetails.razor
@@ -106,6 +106,7 @@ else
         Rental rental = new Rental
         {
             ReadingNumber = ReadingNumber,
+            InventoryNumber = Book.InventoryNumber,
             RentalTime = RentalTime,
             ReturnDeadline = ReturnDeadline
         };
