--- a/BlazorLibrarianPage/Pages/AddCustomerPage.razor
+++ b/BlazorLibrarianPage/Pages/AddCustomerPage.razor
@@ -3,32 +3,28 @@
 @using BlazorLibrarianPage.Services
 @inject ICustomerService CustomerService
 @inject NavigationManager NavigationManager
-@*@inject HttpClient Http
-@using System.Text.Json;
-@using System.ComponentModel.DataAnnotations;
-@using static BlazorLibrarianPage.Pages.Customerlist;*@
 
 <h3>AddCustomer</h3>
 
-<EditForm EditContext="editContext" OnValidSubmit="@AddCustomerAsync">
+<EditForm Model="@Customer" OnValidSubmit="@AddCustomerAsync">
     <DataAnnotationsValidator />
-    <div class="form-group">
+    <div class="form-group mb-2">
         <label for="name">Name:</label>
-        <InputText class="form-control" id="name" @bind-Value="Name" />
+        <InputText class="form-control" id="name" @bind-Value="Customer.Name" />
         <ValidationMessage For="() => Customer.Name" />
     </div>
-    <div class="form-group">
+    <div class="form-group mb-2">
         <label for="address">Address:</label>
-        <InputText class="form-control" id="address" @bind-Value="Address" />
+        <InputText class="form-control" id="address" @bind-Value="Customer.Address" />
     </div>
-    <div class="form-group">
+    <div class="form-group mb-2">
         <label for="readingNumber">Reading Number:</label>
-        <InputNumber class="form-control" id="readingNumber" @bind-Value="ReadingNumber" />
+        <InputNumber class="form-control" id="readingNumber" @bind-Value="Customer.ReadingNumber" />
         <ValidationMessage For="() => Customer.ReadingNumber" />
     </div>
-    <div class="form-group">
+    <div class="form-group mb-2">
         <label for="dateOfBirth">Date of Birth:</label>
-        <InputDate class="form-control" id="dateOfBirth" @bind-Value="DateOfBirth" />
+        <InputDate class="form-control" id="dateOfBirth" @bind-Value="Customer.DateOfBirth" />
     </div>
     <button type="submit" class="btn btn-primary">Add Customer</button>
 </EditForm>
@@ -36,17 +32,6 @@
 @code {
     //private Customer Customer = new Customer();
     private Member? Customer { get; set; }
-    private EditContext editContext;
-
-    private string Name { get; set; }
-    private string Address { get; set; }
-    private int ReadingNumber { get; set; }
-    private DateTime DateOfBirth { get; set; }
-
-    protected override async Task OnInitializedAsync()
-    {
-        editContext = new EditContext(Customer ?? new Member());
-    }
 
     //public class Customer
     //{
@@ -60,32 +45,9 @@
     //    public DateTime DateOfBirth { get; set; }
     //}
 
-    // In your AddCustomer page
     private async Task AddCustomerAsync()
     {
-        Member member = new Member
-        {
-            Name = Name,
-            Address = Address,
-            ReadingNumber = ReadingNumber,
-            DateOfBirth = DateOfBirth
-        };
-
         await CustomerService.AddMemberAsync(Customer!);
         NavigationManager.NavigateTo("/customerlist");
-
-        // Read the existing Customers from the JSON file
-        //string json = await File.ReadAllTextAsync("sample-data/Customer.json");
-        //var Customers = JsonSerializer.Deserialize<Customer[]>(json);
-
-        // Add the new Customer to the array
-        //Array.Resize(ref Customers, Customers.Length + 1);
-        //Customers[Customers.Length - 1] = Customer;
-
-        // Serialize the updated array back to JSON
-        //json = JsonSerializer.Serialize(Customers);
-
-        // Write the JSON back to the file
-        //await File.WriteAllTextAsync("sample-data/Customer.json", json);
     }
 }
