--- a/BlazorCustomerPage/Pages/Booklist.razor
+++ b/BlazorCustomerPage/Pages/Booklist.razor
@@ -1,12 +1,13 @@
 ﻿@page "/booklist"
-@inject HttpClient Http
+@using BlazorFullStack.Contract
+@inject IBookService BookService
 
 <PageTitle>Booklist</PageTitle>
 
 <h1>List of Books</h1>
 
 
-@if (books == null)
+@if (Books == null)
 {
     <p><em>Loading...</em></p>
 }
@@ -24,41 +25,26 @@ else
             </tr>
         </thead>
         <tbody>
-            @foreach (var book in books)
-            {
-                <tr>
-                    <td>@book.Title</td>
-                    <td>@book.Author</td>
-                    <td>@book.Publisher</td>
-                    <td>@book.InventoryNumber</td>
-                    <td>@book.PublishYear</td>
-                    <td><a href="book/@book.Id" class="btn btn-primary">Details</a></td>
-                </tr>
-            }
+        @foreach (var book in Books)
+        {
+                    <tr>
+                        <td>@book.Title</td>
+                        <td>@book.Author</td>
+                        <td>@book.Publisher</td>
+                        <td>@book.InventoryNumber</td>
+                        <td>@book.PublishYear</td>
+                        <td><a href="book/@book.Id" class="btn btn-primary">Details</a></td>
+                    </tr>
+        }
         </tbody>
     </table>
 }
 
 @code {
-    private BookList[]? books;
+    private IEnumerable<Book>? Books { get; set; }
 
     protected override async Task OnInitializedAsync()
     {
-        books = await Http.GetFromJsonAsync<BookList[]>("sample-data/book.json");
-    }
-
-    public class BookList
-    {
-        public int Id { get; set; }
-
-        public string? Title { get; set; }
-
-        public string? Author { get; set; }
-
-        public string? Publisher { get; set; }
-
-        public int InventoryNumber { get; set; }
-
-        public int PublishYear { get; set; }
+        Books = await BookService.GetAllBooksAsync();
     }
 }
